PROJECT(URQMD_MUSIC)
CMAKE_MINIMUM_REQUIRED(VERSION 3.4)
ENABLE_LANGUAGE(Fortran)
SET(CMAKE_BUILD_TYPE Release)
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_COMPILER g++)
SET(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/PlayGround)
ADD_SUBDIRECTORY(Transform)
ADD_SUBDIRECTORY(urqmd-3.4)
ADD_SUBDIRECTORY(MUSIC)
ADD_SUBDIRECTORY(osc2u)
ADD_SUBDIRECTORY(iSS)